--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <body
+    data-sveltekit-preload-data="hover"
+    class="bg-[url(/adrian-yu-unsplash.jpg)] bg-cover bg-fixed bg-center bg-no-repeat"
+  >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
